bug on mobile device

--- a/main.css
+++ b/main.css
@@ -12,16 +12,17 @@
 }
 body {
   font-family: "Lato", sans-serif;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 /*górny pasek navigacyjny z goiem i hamburgerem*/
+header {
+}
 .nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 3rem;
   background: var(--nav-bg-color);
-  z-index: 2;
 }
 .nav__logo {
   width: 2rem;
